concord_macros/tests/trybuild/fail/codegen_contract/unsupported_ws_method.stderr
error: unsupported endpoint method
 --> tests/trybuild/fail/codegen_contract/unsupported_ws_method.rs:8:5
  |
8 |     WS Connect
  |     ^^
